Fix reconciliation print out wrapping
Also added some gray borders to make it easier to view each row.

refs #11193

--- a/src/main/webapp/assets/css/less/common/print.less
+++ b/src/main/webapp/assets/css/less/common/print.less
@@ -5,7 +5,7 @@
 // Margins to use when printing
 .large-print-font-size {
   @media print {
-    font-size: 12pt;
+    font-size: 11pt;
   }
 }
 
@@ -19,6 +19,12 @@
   @media screen {
     display: none;
     visibility: hidden;
+  }
+}
+
+.print-gray-bottom-border {
+  @media print {
+    border-bottom: 1px darkgray solid;
   }
 }
 
